# bioinfomatic_spec

./: .gitignore  README.md  dataset_30272_13.txt  dataset_30272_6.txt  dataset_30273_2.txt  dataset_30273_5.txt  dataset_30274_5.txt  dataset_30278_3.txt  dataset_30278_4.txt  dataset_30278_6.txt  dataset_30278_9.txt  gene_frequency.py  main.py  pyproject.toml  test_ray.py  util.py
src/: gene_frequency.py  mismatch_frequency.py
