[tool.poetry]
name = "bioinfomatic-spec"
version = "0.1.0"
description = "bioinformatic specification coursera"
authors = ["vitahoang"]
license = "MIT"
readme = "README.md"
packages = [{include = "bioinfomatic_spec"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ray = {extras = ["default"], version = "^2.21.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
